fix imageoverflow issue on home page

--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -82,8 +82,10 @@ body{
 
 .rocket{
 	position: relative;
-	bottom: 228px;
+	top: -85px;
 	float: right;
+	max-width: 100%;
+	max-height:100%;
 }
 
 .btn {
